@@ -64,17 +64,17 @@ dependencies {
   api 'org.apache.htrace:htrace-core4:4.1.0-incubating'
   api "org.apache.logging.log4j:log4j-core:${versions.log4j}"
   api 'org.apache.avro:avro:1.10.2'
-  api "com.fasterxml.jackson.core:jackson-databind:${versions.jackson}"
-  api 'com.google.code.gson:gson:2.8.9'
+  api "com.fasterxml.jackson.core:jackson-databind:${versions.jackson_databind}"
+  api 'com.google.code.gson:gson:2.9.0'
   runtimeOnly 'com.google.guava:guava:30.1.1-jre'
-  api 'com.google.protobuf:protobuf-java:2.5.0'
+  api 'com.google.protobuf:protobuf-java:3.19.3'
   api 'commons-logging:commons-logging:1.1.3'
   api 'commons-cli:commons-cli:1.2'
   api "commons-codec:commons-codec:${versions.commonscodec}"
   api 'commons-collections:commons-collections:3.2.2'
   api 'org.apache.commons:commons-compress:1.21'
   api 'org.apache.commons:commons-configuration2:2.7'
-  api 'commons-io:commons-io:2.7'
+  api 'commons-io:commons-io:2.11.0'
   api 'org.apache.commons:commons-lang3:3.7'
   implementation 'com.google.re2j:re2j:1.1'
   api 'javax.servlet:servlet-api:2.5'
@@ -83,7 +83,7 @@ dependencies {
   api 'net.minidev:json-smart:2.4.7'
   api 'org.apache.zookeeper:zookeeper:3.7.0'
   api "io.netty:netty-all:${versions.netty}"
-  implementation 'com.fasterxml.woodstox:woodstox-core:6.1.1'
+  implementation 'com.fasterxml.woodstox:woodstox-core:6.2.8'
   implementation 'org.codehaus.woodstox:stax2-api:4.2.1'
 
   hdfsFixture project(':test:fixtures:hdfs-fixture')
@@ -111,6 +111,19 @@ normalization {
 
 tasks.named("dependencyLicenses").configure {
   mapping from: /hadoop-.*/, to: 'hadoop'
+}
+
+thirdPartyAudit {
+  ignoreViolations(
+    // uses internal java api: sun.misc.Unsafe
+    'com.google.protobuf.MessageSchema',
+    'com.google.protobuf.UnsafeUtil',
+    'com.google.protobuf.UnsafeUtil$1',
+    'com.google.protobuf.UnsafeUtil$Android32MemoryAccessor',
+    'com.google.protobuf.UnsafeUtil$Android64MemoryAccessor',
+    'com.google.protobuf.UnsafeUtil$JvmMemoryAccessor',
+    'com.google.protobuf.UnsafeUtil$MemoryAccessor'
+  )
 }
 
 tasks.named("integTest").configure {
@@ -227,6 +240,10 @@ for (String integTestTaskName : ['integTestHa', 'integTestSecure', 'integTestSec
             project(':test:fixtures:krb5kdc-fixture').ext.krb5Keytabs("hdfs", "hdfs_hdfs.build.opensearch.org.keytab")
           )
         }
+      }
+
+      if (BuildParams.runtimeJavaVersion > JavaVersion.VERSION_1_8) {
+        jvmArgs += ["--add-opens", "java.security.jgss/sun.security.krb5=ALL-UNNAMED"]
       }
   }
 
